[gd_scene load_steps=5 format=3 uid="uid://bxyif2hlwumx2"]

[ext_resource type="Script" path="res://ui/finished_screen.gd" id="1_ltjmc"]
[ext_resource type="PackedScene" path="res://ui/score_board.tscn" id="2_d1l5c"]
[ext_resource type="PackedScene" path="res://ui/star_section_container.tscn" id="2_h6qmn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_unejn"]
bg_color = Color(0.188235, 0.329412, 0.6, 0.427451)

[node name="FinishedScreen" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -239.0
offset_right = 228.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_unejn")
script = ExtResource("1_ltjmc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="LevelFinishedLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level Finished!"
horizontal_alignment = 1

[node name="StarSectionContainer" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_h6qmn")]
unique_name_in_owner = true
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Your time: xx:xx"
horizontal_alignment = 1

[node name="NextLevelTipContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/NextLevelTipContainer"]
layout_mode = 2
text = "You unlocked the next level!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TryAgainButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="NextLevelButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play the next level"

[node name="LeveLSelectionButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select another level"

[node name="ScoreBoard" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_d1l5c")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LeveLSelectionButton" to="." method="_on_leve_l_selection_button_pressed"]
